--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Simple GraphQL server",
+  "main": "server.js",
   "dependencies": {
+    "axios": "^0.19.0",
     "express": "^4.17.1",
     "express-graphql": "^0.8.0",
     "graphql": "^14.4.2",
+    "json-server": "^0.15.0",
     "nodemon": "^1.19.1"
   },
   "devDependencies": {},
   "scripts": {
-    "dev:server": "nodemon server.js"
+    "dev:server": "nodemon server.js",
+    "json:server": "json-server --watch data.json"
   },
   "author": "",
   "license": "ISC"
